--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
 <body>
 
   <nav class="nav-bar">
-    <a href="index.html" class="home">← OCEAN DREAMS</a>
+    <a href="index.html" class="home">&larr; OCEAN DREAMS</a>
     <div>
       <a href="jellyfish.html">JELLYFISH</a>
       <a href="coral.html">CORAL</a>
@@ -300,10 +300,10 @@
 
     <div class="box" style="text-align: center; margin-top: 3rem;">
       <p style="font-size: 1.2rem; color: #00d9ff;">
-        <strong>Made with 💙 for the Ocean</strong>
+        <strong>Made with love for the ocean</strong>
       </p>
       <p style="margin-top: 1rem; font-size: 0.9rem;">
-        <a href="index.html">← Back to Home</a>
+        <a href="index.html">&larr; Back to Home</a>
       </p>
     </div>
   </div>
