--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   </div>
 
   <footer>
-    <p>SAVE THE OCEAN • PROTECT OUR FUTURE</p>
+    <p>SAVE THE OCEAN | PROTECT OUR FUTURE</p>
   </footer>
 
   <script>
