--- a/jellyfish.html
+++ b/jellyfish.html
@@ -167,7 +167,7 @@
 <body>
 
   <nav class="nav-bar">
-    <a href="index.html" class="home">← OCEAN DREAMS</a>
+    <a href="index.html" class="home">&larr; OCEAN DREAMS</a>
     <div>
       <a href="jellyfish.html">JELLYFISH</a>
       <a href="coral.html">CORAL</a>
